--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ website_full: https://dipromondal.github.io
 github: trending
 tel: +31 683920381
 tel_full: tel:+31 683920381
-google_maps: 'https://www.google.com/maps/place/Herensingel+7A,+2316+JS+Leiden'
+google_maps: 'https://www.google.com/maps/place/Kasteel+Aldengoorstraat+35,+6222+WJ+Maastricht'
 address:
-  street: 7A Herensignel
-  postcode: 2316 JS
-  city: Leiden
+  street: Kasteel Aldengoorstraat 35A
+  postcode: 6222 WJ
+  city: Maastricht, Limburg
   country: the Netherlands
 google_analytics: G-WXTLEDKBGY
 
